# quick_soar

./: Cargo.toml  README.md  analysis.xlsx  backlog.md
examples/: CX.igc  aat.igc  aat_outlanding.igc  ast.igc  example.igc
src/: lib.rs  main.rs
src/analysis/: calculation.rs  mod.rs  segmenting.rs  util.rs
src/excel/: file_writer.rs
src/file_handling/: igc_parser.rs  mod.rs  pilot_info.rs  task.rs
src/parser/: mod.rs  pilot_info.rs  task.rs  util.rs
src/web_handling/: mod.rs  soaringspot.rs  soup.rs
