[package]
name = "quick_soar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igc = "0.2.2"
regex = "1.7.1"
table-extract = "0.2.2"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
umya-spreadsheet = "0.9.1"