[package]
name = "quick_soar"
version = "0.1.0"
edition = "2021"

[dependencies]
igc = "0.2.2"
regex = "1.7.1"
table-extract = "0.2.2"
reqwest = "0.11.14"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
umya-spreadsheet = "0.9.1"
enum-iterator = "1.4.0"
home = "0.5.5"
opener = "0.6.1"
